# ComfyUI-Discord-helper

./: .env.example  .gitignore  LICENSE  README.md  UV_SETUP.md  api.py  bot.py  default_workflow.json  pyproject.toml  requirements.txt  scp_uploader.py
workflow/: img2img.json  txt2img.json
