[project]
name = "comfyui-discord-helper"
version = "0.1.0"
description = "Discord bot for ComfyUI image generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.0.0",
    "python-dotenv>=0.19.0",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "paramiko>=2.11.0",
    "pillow>=9.0.0",
]

[project.scripts]
bot = "bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["bot.py", "api.py", "workflow/"]

[tool.uv]
dev-dependencies = []
package = true

